--- a/about-us.html
+++ b/about-us.html
@@ -18,38 +18,64 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.t14279a80926483f05f7485f416ff6b09 a,.c6d2f5931f0d62b7103a22ee2813b82dc a{
-color:#0f0f0f!important;
-text-decoration: underline !important;
-}
-.z4f5add469d738be80fdacf644f5e3bf4:hover{
-box-shadow: 0 49.5px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
 html{
 scroll-behavior: smooth;
 }
-.ye0e59bf006f935c0124e8833bdff5119{
-border: 1px solid #627f8d30;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f4f2ee;
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+.y9b0eaa76c4455ca5ff6a301dc9b83197 p,.y9b0eaa76c4455ca5ff6a301dc9b83197 span,.y9b0eaa76c4455ca5ff6a301dc9b83197 label{
+font-size:16px!important;
+}
+.edce40aeedd9afe775f839cd5c81ed563 p,.edce40aeedd9afe775f839cd5c81ed563 a,.edce40aeedd9afe775f839cd5c81ed563 span,.edce40aeedd9afe775f839cd5c81ed563 label{
+font-size:16px!important;
+}
+.nav-item{
+padding-left:7.9px;
+padding-right:8.2px;
+padding-top:4.8px;
+padding-bottom:5px;
+}
+.btn-md{
+padding: 15.2px 30.5px;
+border-radius: 0;
+}
+.edce40aeedd9afe775f839cd5c81ed563 a,.y9b0eaa76c4455ca5ff6a301dc9b83197 a{
+color:#0a0a0a!important;
+text-decoration: underline !important;
+}
+.y9b0eaa76c4455ca5ff6a301dc9b83197 a{
+font-size:16px;
 }
 footer{
-background:#070707;
+background:#040404;
 color:#ffffff;
 }
-.c6d2f5931f0d62b7103a22ee2813b82dc p,.c6d2f5931f0d62b7103a22ee2813b82dc span,.c6d2f5931f0d62b7103a22ee2813b82dc label{
-font-size:16px!important;
+.d982d3dbd375b5517bf747ff2ebfdb34c{
+border: 1px solid #617e8c2f;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f3f1ed;
 }
-.t14279a80926483f05f7485f416ff6b09 p,.t14279a80926483f05f7485f416ff6b09 a,.t14279a80926483f05f7485f416ff6b09 span,.t14279a80926483f05f7485f416ff6b09 label{
-font-size:16px!important;
+.navbar a{
+font-size: 17.8px!important;
+font-weight: bold;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.y54a8eb805339b5da99cface247bace4c:hover{
+box-shadow: 0 49.8px 49.8px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.d3f72baec79ccf1dbf7ed7467723d340b{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 ul{
 list-style: circle;
+}
+footer *{
+font-size:16px !important;
 }
 a{
 text-decoration: none!important;
@@ -58,61 +84,35 @@ text-decoration: none!important;
 color: #000000!important;
 
 }
-footer *{
-font-size:16px !important;
-}
-.nav-item{
-padding-left:8.1px;
-padding-right:7.6px;
-padding-top:5px;
-padding-bottom:4.6px;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.navbar a{
-font-size: 17.5px!important;
-font-weight: bold;
-}
-.btn-md{
-padding: 15.1px 29.6px;
-border-radius: 0;
-}
-.x156bbef49c806fdec023570c294d0b89{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.c6d2f5931f0d62b7103a22ee2813b82dc a{
-font-size:16px;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
-<a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" href="index.html" >plumbing quotes</a>
+<ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
+<a class="nav-link f4684edbc1467930256b98b647d1cbdd6" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="f4684edbc1467930256b98b647d1cbdd6 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link f4684edbc1467930256b98b647d1cbdd6" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link y6ff395f59cacb9a0578c95b28e0b6e6f" href="quote-my-job.html" >quote my job</a>
+<a class="nav-link f4684edbc1467930256b98b647d1cbdd6" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="dropdown-toggle nav-link y6ff395f59cacb9a0578c95b28e0b6e6f" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<li class="nav-item dropdown">
+<a class="dropdown-toggle f4684edbc1467930256b98b647d1cbdd6 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="y6ff395f59cacb9a0578c95b28e0b6e6f nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link f4684edbc1467930256b98b647d1cbdd6" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-size:16px;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 ye0e59bf006f935c0124e8833bdff5119">
+<div class="col-md-12 mb-3 d982d3dbd375b5517bf747ff2ebfdb34c">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="y6ff395f59cacb9a0578c95b28e0b6e6f" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="f4684edbc1467930256b98b647d1cbdd6" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="f4684edbc1467930256b98b647d1cbdd6" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="f4684edbc1467930256b98b647d1cbdd6" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="f4684edbc1467930256b98b647d1cbdd6" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="v75156726dbc1b6001909e17840291b9d facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="v75156726dbc1b6001909e17840291b9d pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="v75156726dbc1b6001909e17840291b9d google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="v75156726dbc1b6001909e17840291b9d twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="c369f5feaf63ffca412a6dbf36ce2424d facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="c369f5feaf63ffca412a6dbf36ce2424d pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="c369f5feaf63ffca412a6dbf36ce2424d google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter c369f5feaf63ffca412a6dbf36ce2424d" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
