--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,94 +19,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.nav-link{
-color: #000000!important;
-
-}
-.u7595ff50ea318d11ea15a3869066465f p,.u7595ff50ea318d11ea15a3869066465f span,.u7595ff50ea318d11ea15a3869066465f label{
-font-size:16px!important;
-}
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.u7595ff50ea318d11ea15a3869066465f a{
-font-size:16px;
-}
-.btn-md{
-padding: 14.6px 29.5px;
-border-radius: 0;
-}
-footer{
-background:#090909;
-color:#ffffff;
-}
-.u3118f06dadda8ed1daf67e3d2da8b506 p,.u3118f06dadda8ed1daf67e3d2da8b506 a,.u3118f06dadda8ed1daf67e3d2da8b506 span,.u3118f06dadda8ed1daf67e3d2da8b506 label{
-font-size:16px!important;
-}
-.fc2340a573a973b0d36dbb28b2014b713:hover{
-box-shadow: 0 50.5px 49.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
 .navbar a{
-font-size: 18.4px!important;
+font-size: 17.9px!important;
 font-weight: bold;
 }
 ul{
 list-style: circle;
 }
-.y995fb0d44fbc15fb2b576502bdffdf4b{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.u3118f06dadda8ed1daf67e3d2da8b506 a,.u7595ff50ea318d11ea15a3869066465f a{
-color:#070707!important;
-text-decoration: underline !important;
+.vb9f081dde8cb0429c6af2e41414c028b:hover{
+box-shadow: 0 50.4px 49.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 a{
 text-decoration: none!important;
 }
+.da1f20057b988f2183dbd991ab666578e a,.xa41c7090a44c26798871d9a60ab06cc7 a{
+color:#0a0a0a!important;
+text-decoration: underline !important;
+}
+.da1f20057b988f2183dbd991ab666578e p,.da1f20057b988f2183dbd991ab666578e a,.da1f20057b988f2183dbd991ab666578e span,.da1f20057b988f2183dbd991ab666578e label{
+font-size:16px!important;
+}
+.btn-md{
+padding: 15.4px 30.2px;
+border-radius: 0;
+}
+.xa41c7090a44c26798871d9a60ab06cc7 a{
+font-size:16px;
+}
+.wbcab1196eb260b91960eff44abe74004{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.nav-item{
+padding-left:7.7px;
+padding-right:8.3px;
+padding-top:5.5px;
+padding-bottom:4.5px;
+}
+footer{
+background:#090909;
+color:#ffffff;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
 footer *{
 font-size:16px !important;
 }
-.nav-item{
-padding-left:7.5px;
-padding-right:8.1px;
-padding-top:4.7px;
-padding-bottom:5.2px;
+.xa41c7090a44c26798871d9a60ab06cc7 p,.xa41c7090a44c26798871d9a60ab06cc7 span,.xa41c7090a44c26798871d9a60ab06cc7 label{
+font-size:16px!important;
 }
 html{
 scroll-behavior: smooth;
 }
+.nav-link{
+color: #000000!important;
+
+}
 </style>
 </head>
 <body>
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
-<a class="nav-link z4bf28431cf2b533680f1c2bd45313d7a" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
+<a class="nav-link w3e2224434c9d0eba5860eeb651c0daf6" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="z4bf28431cf2b533680f1c2bd45313d7a nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="w3e2224434c9d0eba5860eeb651c0daf6 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z4bf28431cf2b533680f1c2bd45313d7a" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link w3e2224434c9d0eba5860eeb651c0daf6" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="z4bf28431cf2b533680f1c2bd45313d7a nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="nav-link w3e2224434c9d0eba5860eeb651c0daf6" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="z4bf28431cf2b533680f1c2bd45313d7a dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="dropdown nav-item">
+<a class="nav-link dropdown-toggle w3e2224434c9d0eba5860eeb651c0daf6" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="z4bf28431cf2b533680f1c2bd45313d7a nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="w3e2224434c9d0eba5860eeb651c0daf6 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="z4bf28431cf2b533680f1c2bd45313d7a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="z4bf28431cf2b533680f1c2bd45313d7a" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="z4bf28431cf2b533680f1c2bd45313d7a" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="z4bf28431cf2b533680f1c2bd45313d7a" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="w3e2224434c9d0eba5860eeb651c0daf6" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="w3e2224434c9d0eba5860eeb651c0daf6" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="w3e2224434c9d0eba5860eeb651c0daf6" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="w3e2224434c9d0eba5860eeb651c0daf6" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="t3ff7deaf904d158781a5e27509563b58 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="t3ff7deaf904d158781a5e27509563b58 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google t3ff7deaf904d158781a5e27509563b58-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter t3ff7deaf904d158781a5e27509563b58" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook dd7a9d1c1615c402d93171668db5a3cb4" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest dd7a9d1c1615c402d93171668db5a3cb4" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google dd7a9d1c1615c402d93171668db5a3cb4-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter dd7a9d1c1615c402d93171668db5a3cb4" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
