--- a/about-us.html
+++ b/about-us.html
@@ -18,64 +18,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-html{
-scroll-behavior: smooth;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.y9b0eaa76c4455ca5ff6a301dc9b83197 p,.y9b0eaa76c4455ca5ff6a301dc9b83197 span,.y9b0eaa76c4455ca5ff6a301dc9b83197 label{
-font-size:16px!important;
-}
-.edce40aeedd9afe775f839cd5c81ed563 p,.edce40aeedd9afe775f839cd5c81ed563 a,.edce40aeedd9afe775f839cd5c81ed563 span,.edce40aeedd9afe775f839cd5c81ed563 label{
-font-size:16px!important;
-}
-.nav-item{
-padding-left:7.9px;
-padding-right:8.2px;
-padding-top:4.8px;
-padding-bottom:5px;
-}
-.btn-md{
-padding: 15.2px 30.5px;
-border-radius: 0;
-}
-.edce40aeedd9afe775f839cd5c81ed563 a,.y9b0eaa76c4455ca5ff6a301dc9b83197 a{
-color:#0a0a0a!important;
-text-decoration: underline !important;
-}
-.y9b0eaa76c4455ca5ff6a301dc9b83197 a{
-font-size:16px;
-}
-footer{
-background:#040404;
-color:#ffffff;
-}
-.d982d3dbd375b5517bf747ff2ebfdb34c{
-border: 1px solid #617e8c2f;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f3f1ed;
-}
-.navbar a{
-font-size: 17.8px!important;
-font-weight: bold;
-}
-.y54a8eb805339b5da99cface247bace4c:hover{
-box-shadow: 0 49.8px 49.8px -25px rgb(0 0 0 / 30%);
+.zd9c461307b13752233a502dd51edfaf7:hover{
+box-shadow: 0 49.8px 49.7px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
-}
-.d3f72baec79ccf1dbf7ed7467723d340b{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-ul{
-list-style: circle;
-}
-footer *{
-font-size:16px !important;
 }
 a{
 text-decoration: none!important;
@@ -84,35 +29,90 @@ text-decoration: none!important;
 color: #000000!important;
 
 }
+footer{
+background:#040404;
+color:#ffffff;
+}
+footer *{
+font-size:16px !important;
+}
+.wf424de1c98cab7b36ccd8cd96a8e4629 p,.wf424de1c98cab7b36ccd8cd96a8e4629 span,.wf424de1c98cab7b36ccd8cd96a8e4629 label{
+font-size:16px!important;
+}
+.btn-md{
+padding: 15.3px 29.7px;
+border-radius: 0;
+}
+.b2dac4e1b26285879eeebbff256de27b8 p,.b2dac4e1b26285879eeebbff256de27b8 a,.b2dac4e1b26285879eeebbff256de27b8 span,.b2dac4e1b26285879eeebbff256de27b8 label{
+font-size:16px!important;
+}
+.y3afcaa62309dbf8e2e4457380d63c813{
+border: 1px solid #728f9d40;
+border-radius: 5px;
+padding: 20px 20px;
+background: #efede9;
+}
+ul{
+list-style: circle;
+}
+.c6cb9930442612afdbaa7d725308b5e2d{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.navbar a{
+font-size: 18.2px!important;
+font-weight: bold;
+}
+.wf424de1c98cab7b36ccd8cd96a8e4629 a{
+font-size:16px;
+}
+.b2dac4e1b26285879eeebbff256de27b8 a,.wf424de1c98cab7b36ccd8cd96a8e4629 a{
+color:#121212!important;
+text-decoration: underline !important;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+.nav-item{
+padding-left:8px;
+padding-right:7.6px;
+padding-top:4.7px;
+padding-bottom:5.4px;
+}
 *{
 font-family: 'Kumbh Sans', sans-serif;
+}
+html{
+scroll-behavior: smooth;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
-<a class="nav-link f4684edbc1467930256b98b647d1cbdd6" href="index.html" >plumbing quotes</a>
+<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
+<a class="ecf90ed31f67251ba60943835746f8266 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="f4684edbc1467930256b98b647d1cbdd6 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link ecf90ed31f67251ba60943835746f8266" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link f4684edbc1467930256b98b647d1cbdd6" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link ecf90ed31f67251ba60943835746f8266" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link f4684edbc1467930256b98b647d1cbdd6" href="quote-my-job.html" >quote my job</a>
+<a class="ecf90ed31f67251ba60943835746f8266 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="dropdown-toggle f4684edbc1467930256b98b647d1cbdd6 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="dropdown nav-item">
+<a class="nav-link dropdown-toggle ecf90ed31f67251ba60943835746f8266" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link f4684edbc1467930256b98b647d1cbdd6" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="ecf90ed31f67251ba60943835746f8266 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-family: 'Kumbh Sans', sans-serif;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 d982d3dbd375b5517bf747ff2ebfdb34c">
+<div class="col-md-12 mb-3 y3afcaa62309dbf8e2e4457380d63c813">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="container py-4 pt-5" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="f4684edbc1467930256b98b647d1cbdd6" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="f4684edbc1467930256b98b647d1cbdd6" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="f4684edbc1467930256b98b647d1cbdd6" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="f4684edbc1467930256b98b647d1cbdd6" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="ecf90ed31f67251ba60943835746f8266" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="ecf90ed31f67251ba60943835746f8266" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="ecf90ed31f67251ba60943835746f8266" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="ecf90ed31f67251ba60943835746f8266" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="c369f5feaf63ffca412a6dbf36ce2424d facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="c369f5feaf63ffca412a6dbf36ce2424d pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="c369f5feaf63ffca412a6dbf36ce2424d google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter c369f5feaf63ffca412a6dbf36ce2424d" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook a8d128c8225cbd31fda60b505edf91fe7" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="a8d128c8225cbd31fda60b505edf91fe7 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="a8d128c8225cbd31fda60b505edf91fe7 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter a8d128c8225cbd31fda60b505edf91fe7" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
